# BivittatusDB

./: .gitignore  BDB_io.py  BDB_metadata.py  BDB_tb.py  BivittatusDB.py  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  bdb_aggregate.py  pydb.py  pydb_io.py  pydb_metadata.py  pydb_tb.py  pyproject.toml  requirements.txt  setup.py  version.txt
.github/: CODE_OF_CONDUCT.md  requirements.txt
.github/workflows/: gitleaks.yml  pypi.yml  python-publish.yml  setup.py
BivittatusDB/: BDB_io.py  BDB_metadata.py  BDB_tb.py  BivittatusDB.py  __init__.py  bdb_aggregate.py  bdb_foreign.py  encrypt.py  menu.py  metaclass.py  setup.py  tty_log.py
BivittatusDB/DB_manage/: !note.txt  adding_rows.py  display_files.py  file_notation.py  file_operations.py  list_pydb.py  metadata.py  note.txt  removing_rows.py  table_view.py  update_table.py
BivittatusDB/Schema_master/: shema_manager.py
BivittatusDB/encryption/: key_transition.py
BivittatusDB/utils/: clean_screan.py
examples/: data.json  ex_add_rows.py  ex_aggregates.py  ex_auto_commit.py  ex_comparison.py  ex_file_notation.py  ex_foreign_key.py  ex_joins.py  ex_load_from_json.py  ex_loop_table.py  ex_make_table.py  ex_manual_scan.py  ex_metadata.py  ex_refresh.py  ex_remove_rows.py  ex_save.py  ex_save_temp.py  ex_sort.py  ex_transactions.py  ex_update.py  ex_use_table.py  schema.json
src/: BDB_io.py  BDB_metadata.py  BDB_tb.py  BivitattusView.py  BivittatusDB.py  encrypt.py  ex_add_rows.py  metaclass.py
src/BivitattusDB/: BDB_io.py  BDB_metadata.py  BDB_tb.py  BivitattusView.py  BivittatusDB.py  bdb_aggregate.py  (+3 more)
(+10 files in other folders)
