[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build"

[project]
name = "BivitattusDB"
version = "2.1.0"
authors = [
  { name="HarbingerOfFire", email="harbingeroffire@proton.me" },
]
description = "BivitattusDB"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.urls]
Homepage = "https://github.com/HarbingerOfFire/bivittatusDB"
Issues = "https://github.com/HarbingerOfFire/bivittatusDB/issues"
